# g-CodeCoverage

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  show_coverage.sh
src/: Makefile  factorial.cpp  factorial.h  factorial.hh
test/: .gitignore  Makefile  factorial_test.cpp  test_runner.cpp
